Cambio el diseño del footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,51 +1,123 @@
-<div class="footer">
-
-  <div class="submenu pt-5 ">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <ul>
-            <b>SAMA</b>
-            <br />
-            <li>Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas
-              de
-              la mano de un operador 100% gallega</li>
-          </ul>
-        </div>
-        <div class="col">
-          <ul>
-            <b>MENÚ</b>
-            <br />
-            <li>Link 1</li>
-            <li>Link 2</li>
-            <li>Link 3</li>
-          </ul>
-        </div>
-        <div class="col">
-          <ul>
-            <b>EMPRESA</b>
-            <br />
-            <li><a routerLink="./aviso-legal">Aviso legal</a></li>
-            <li><a routerLink="./cookies">Politica de cookies</a></li>
-            <li><a routerLink="./privacidad">Politica de privacidad</a></li>
-            <li><a routerLink="./conocenos">Conócenos</a>
-          </ul>
-        </div>
-        <div class="col">
-          <ul>
-            <b>Contacto</b>
-            <br />
-            <li><a href="https://www.google.es/maps/place/Sama+Telecomunicaciones+y+Servicios,+SL/@43.3616192,-8.4211592,20.75z/data=!4m5!3m4!1s0xd2e7d849d2faf11:0x4f9676cbf3f233b6!8m2!3d43.3616045!4d-8.4209698" target="blank">CALLE BARCELONA, NUM. 41 OFICINA 15010 CORUÑA (A) - (CORUÑA, A)</a></li>
-            <li><a href="tel:+34684603551">684 60 35 51</a></li>
-            <li><a href="direccion@samatelecomunicaciones.com">direccion@samatelecomunicaciones.com</a>
-          </ul>
-        </div>
-      </div>
+.
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Nuestras redes sociales:</span>
     </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>SAMA
+          </h6>
+          <p>
+            Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas
+            de la mano de un operador 100% gallega
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            MENU
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Link 1</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Link 2</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Link 3</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Link 4</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            EMPRESA
+          </h6>
+          <p>
+            <a routerLink="./aviso-legal">Aviso legal</a>
+          </p>
+          <p>
+            <a routerLink="./cookies">Politica de cookies</a>
+          </p>
+          <p>
+            <a routerLink="./privacidad">Politica de privacidad</a>
+          </p>
+          <p>
+            <a routerLink="./conocenos">Conócenos</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            CONTACTO
+          </h6>
+          <p><i class="fas fa-home me-3"></i> <a href="https://www.google.es/maps/place/Sama+Telecomunicaciones+y+Servicios,+SL/@43.3616192,-8.4211592,20.75z/data=!4m5!3m4!1s0xd2e7d849d2faf11:0x4f9676cbf3f233b6!8m2!3d43.3616045!4d-8.4209698" target="blank">CALLE BARCELONA, NUM. 41 OFICINA 15010 CORUÑA (A) - (CORUÑA, A)</a></p>
+          <p class="d-flex">
+            <i class="fas fa-envelope me-3"></i>
+            <a href="direccion@samatelecomunicaciones.com">direccion@samatelecomunicaciones.com</a>
+          </p>
+          <p><i class="fas fa-phone me-3"></i> <a href="tel:+34684603551">684 60 35 51</a></p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    <a> Todos los derechos reservados © 2022</a>
   </div>
   <!-- Copyright -->
-  <div class="copyright text-center p-4">
-    Todos los derechos reservados © 2022
-  </div>
-  <!-- Copyright -->
-</div>
+</footer>
+<!-- Footer -->
