--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,3 @@
-.
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
   <!-- Section: Social media -->
@@ -56,16 +55,13 @@
             MENU
           </h6>
           <p>
-            <a href="#!" class="text-reset">Link 1</a>
+            <a routerLink="./contract" class="text-reset">Tarifa</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Link 2</a>
+            <a routerLink="./call-me" class="text-reset">Contacto</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Link 3</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Link 4</a>
+            <a routerLink="./help" class="text-reset">Ayuda</a>
           </p>
         </div>
         <!-- Grid column -->
