--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -12,9 +12,9 @@ li {
     color: #fff;
 }
 
-.footer {
+/* .footer {
     position:fixed;
     bottom:0px;
     width:100%;
     background:#999;
- }
+ }  */
