--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<nav id="navbar-example2" class="navbar navbar-light bg-light d-flex justify-content-around">
-    <ul class="nav nav-pills">
+<nav id="navbar-example2" class="navbar navbar-light bg-light d-flex justify-content-md-around">
+    <ul class="nav nav-pills d-flex flex-column flex-md-row">
         <li class="navbar-brand">
             <a class="nav-link fuente" href="./home#fm">FIBRA + MÓVIL</a>
         </li>
@@ -11,7 +11,7 @@
       </li>
     </ul>
   </nav>
-  <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+  <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="mt-3 p-3">
     <h4 id="fm">FIBRA + MÓVIL</h4>
     <p>Patrón</p>
     <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
