--- a/src/app/pages/contract/contract.component.html
+++ b/src/app/pages/contract/contract.component.html
@@ -5,41 +5,71 @@
         <!-- ###################RADIO BUTTONS################## -->
         <!-- ################################################## -->
           <div class="form-check mt-3">
-            <input class="form-check-input" type="radio" name="tarifa" id="flexRadioDefault1" required>
+            <input class="form-check-input" type="radio" formControlName="tarifa" value="movil">
             <label class="form-check-label" for="flexRadioDefault1">
               <b>MÓVIL</b>
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="tarifa" id="flexRadioDefault2" required>
+            <input class="form-check-input" type="radio" formControlName="tarifa" value="movilfibra">
             <label class="form-check-label" for="flexRadioDefault2">
                 <b>FIBRA + MÓVIL</b>
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="tarifa" id="flexRadioDefault3" required>
+            <input class="form-check-input" type="radio" formControlName="tarifa" value="fibra">
             <label class="form-check-label" for="flexRadioDefault3">
                 <b>SOLO FIBRA</b>
             </label>
+          </div>
+          <div class="mt-2">
+            <small class="rojo" *ngIf="errorTarifa">
+              * Elija una de las opciones disponibles
+            </small>
           </div>
         <!-- ################################################## -->
         <!-- ###################¡COMENZAMOS!################### -->
         <!-- ################################################## -->
         <div class="mt-4"><span class="rojo">1. </span>¡COMENZAMOS!</div>
-        <div class="mt-3 mb-3 d-md-flex gap-3 d-grid">
-            <input type="text" class="form-control" id="exampleInput1" placeholder="Nombre" formControlName="nombre">
-            <input type="text" class="form-control" id="exampleInput2" placeholder="Apellido" formControlName="apellido">
-        </div>
-        <div class="mt-2 d-md-flex gap-3 d-grid">
+          <div class="mt-3 mb-3 row row-cols-1 row-cols-md-2">
+            <div class="col">
+              <input type="text" class="form-control" id="exampleInput1" placeholder="Nombre" formControlName="nombre">
+              <small class="rojo" *ngIf="errorNombre">
+                * Campo vacío o inferior a 2 caracteres
+              </small>
+            </div>
+            <div class="col mt-3 mt-md-0">
+              <input type="text" class="form-control" id="exampleInput2" placeholder="Apellido" formControlName="apellido">
+              <small class="rojo" *ngIf="errorApellido">
+                * Campo vacío o inferior a 2 caracteres
+              </small>
+            </div>
+          </div>
+        <div class="mt-2 row row-cols-1 row-cols-md-2">
+          <div class="col">
             <input type="email" class="form-control" id="exampleInput3" placeholder="Email" formControlName="email">
-            <input type="tel" class="form-control" id="tel" name="tel" placeholder="Teléfono de Contacto" formControlName="telefono">
+            <small class="rojo" *ngIf="errorEmail">
+              * Campo vacío, inferior a 2 caracteres o email incorrecto
+            </small>
+          </div>
+          <div class="col mt-3 mt-md-0">
+            <input type="tel" (keyup)="validarTelefono()" class="form-control" id="tel" name="tel" placeholder="Teléfono de Contacto" formControlName="telefono">
+            <small class="rojo" *ngIf="errorTelefono">
+              * Campo vacío o inferior a 2 caracteres
+            </small>
+          </div>
         </div>
         <!-- ################################################## -->
         <!-- ###########TU OPERADOR MÓVIL ACTUAL############### -->
         <!-- ################################################## -->
         <div class="mt-4"><span class="rojo">2. </span>TU OPERADOR MÓVIL ACTUAL</div>
-        <div class="mt-3 mb-3 d-md-flex gap-3 d-grid">
-            <input type="text" class="form-control" id="exampleInput1" formControlName="operador">
+        <div class="mt-3 mb-3 col-12">
+            <input  type="text" class="form-control" id="exampleInput1" formControlName="operador">
+            <div class="mt-1">
+              <small class="rojo" *ngIf="errorOperador">
+                * Campo vacío o inferior a 2 caracteres
+              </small>
+            </div>
         </div>
         <!-- ################################################## -->
         <!-- ############¿QUIERES CONSERVAR TU NÚMERO?######### -->
@@ -52,6 +82,11 @@
               <option value="2">NO</option>
             </select>
           </div>
+          <div class="mt-1">
+            <small class="rojo" *ngIf="errorConservar">
+              * Elija una de las opciones disponibles
+            </small>
+          </div>
         <!-- ################################################## -->
         <!-- #########¿TIENES FIBRA CON TU COMPAÑÍA ACTUAL?#### -->
         <!-- ################################################## -->
@@ -63,17 +98,28 @@
               <option value="2">NO</option>
             </select>
           </div>
+          <div class="mt-1">
+            <small class="rojo" *ngIf="errorFibra">
+              * Elija una de las opciones disponibles
+            </small>
+          </div>
         <!-- ################################################## -->
         <!-- ##TE LLAMAMOS GRATIS, SELECCIONA LA FECHA Y HORA## -->
         <!-- ################################################## -->
         <div class="mt-4"><span class="rojo">5. </span>TE LLAMAMOS GRATIS, SELECCIONA LA FECHA Y HORA</div>
         <input class="form-select mt-3" type="datetime-local" name="datetime" id="datetime" formControlName="llamamos">
+        <div class="mt-1">
+          <small class="rojo" *ngIf="errorConservar">
+            * Elija una fecha disponible
+          </small>
+        </div>
         <!-- ################################################## -->
         <!-- ####################ENVIAR######################## -->
         <!-- ################################################## -->
-        <button type="submit" [disabled]="formulario.invalid" class="btn btn-dark btn-lg mb-5 mt-4">Enviar</button>
+        <button (click)="submit()" class="btn btn-dark btn-lg mb-5 mt-4">Enviar</button>
         <!-- #####################FIN########################## -->
     </form>
     <p>Form Value: {{ formulario.value | json }}</p>
     <p>Form Status: {{ formulario.status | json }}</p>
+    <p>Name Status: {{ this.formulario.get('nombre')?.status | json }}</p>
 </div>
