--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<div class="contenedor">
+    <router-outlet></router-outlet>
+</div>
 
 <app-pop-whatsapp></app-pop-whatsapp>
 
