--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,19 @@
 html {
-    width: auto;
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  padding-bottom: 10px;
+  padding-bottom: 10px;
 }
