Corrijo texto de descripcion

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -43,7 +43,7 @@
           </h6>
           <p>
             Somos una compañia ética y sencilla. Disfruta de fibra óptica, gigas en tu móvil y llamadas ilimitadas
-            de la mano de un operador 100% gallega
+            de la mano de un operador 100% asturiano.
           </p>
         </div>
         <!-- Grid column -->
